--- a/app/src/main/res/layout/dialog_search_adverts.xml
+++ b/app/src/main/res/layout/dialog_search_adverts.xml
@@ -4,30 +4,32 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:gravity="center_vertical">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/places_ic_search"/>
+                android:src="@drawable/places_ic_search" />
+
             <EditText
                 android:id="@+id/searchByKeyword_etxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Search by keyword"
                 android:layout_margin="5dp"
-                android:inputType="textShortMessage"/>
+                android:hint="Search by keyword"
+                android:inputType="textShortMessage" />
         </LinearLayout>
 
         <LinearLayout
@@ -35,18 +37,19 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center_vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Advert Type:"/>
+                android:text="Advert Type:" />
 
             <Spinner
                 android:id="@+id/advertType_spnr"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:entries="@array/advert_types"
-                android:padding="5dp"
-                android:layout_gravity="center"/>
+                android:padding="5dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,36 +57,38 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center_vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pet Type:"/>
+                android:text="Pet Type:" />
 
             <Spinner
                 android:id="@+id/petType_spnr"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:entries="@array/pet_types1"
-                android:padding="5dp"
-                android:layout_gravity="center"/>
+                android:padding="5dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pet Breed:"/>
+                android:text="Pet Breed:" />
 
             <AutoCompleteTextView
                 android:id="@+id/petBreed_atxt"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
                 android:hint="Enter Pet Breed"
-                android:inputType="textShortMessage"/>
+                android:inputType="textShortMessage"
+                android:padding="10dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -91,37 +96,40 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center_vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price:"/>
+                android:text="Price:" />
 
             <EditText
                 android:id="@+id/minPrice_etxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="10dp"
                 android:hint="$ Min Price"
-                android:inputType="numberDecimal"/>
+                android:inputType="numberDecimal"
+                android:padding="10dp" />
+
             <EditText
                 android:id="@+id/maxPrice_etxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="10dp"
                 android:hint="$ Max Price"
-                android:inputType="numberDecimal"/>
+                android:inputType="numberDecimal"
+                android:padding="10dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Location:"/>
+                android:text="Location:" />
 
             <AutoCompleteTextView
                 android:id="@+id/country_atxt"
@@ -129,41 +137,43 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="Country"
-                android:inputType="textShortMessage"/>
+                android:inputType="textShortMessage" />
+
             <AutoCompleteTextView
                 android:id="@+id/city_etxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="City"
-                android:inputType="textShortMessage"/>
+                android:inputType="textShortMessage" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/nice_gray"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:background="@color/nice_gray" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center">
+
             <Button
                 android:id="@+id/cancel_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="Cancel"
-                android:layout_margin="5dp"/>
+                android:text="Cancel" />
 
             <Button
                 android:id="@+id/search_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="Search"
-                android:layout_margin="5dp"/>
+                android:text="Search" />
         </LinearLayout>
 
         <TextView
@@ -171,8 +181,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Clear"
             android:padding="5dp"
-            android:textColor="@color/colorAccentDark"/>
+            android:text="Clear"
+            android:textColor="@color/colorAccentDark" />
     </LinearLayout>
 </ScrollView>
