--- a/app/src/main/res/layout-land/list_item_pet.xml
+++ b/app/src/main/res/layout-land/list_item_pet.xml
@@ -5,29 +5,29 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:padding="16dp"
-    android:paddingStart="40dp"
-    android:paddingEnd="40dp">
+    android:paddingEnd="40dp"
+    android:paddingStart="40dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/pet_item_crdv"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardCornerRadius="10dp"
+        android:layout_gravity="center"
+        android:background="?android:attr/selectableItemBackground"
         android:elevation="4dp"
-        android:background="?android:attr/selectableItemBackground">
+        card_view:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_gravity="center"
-            android:gravity="center"
             android:background="@drawable/mypets_list_background"
-            android:paddingTop="5dp"
+            android:gravity="center"
+            android:orientation="vertical"
             android:paddingBottom="10dp"
+            android:paddingEnd="5dp"
             android:paddingStart="5dp"
-            android:paddingEnd="5dp">
+            android:paddingTop="5dp">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -38,24 +38,24 @@
                     android:id="@+id/pet_picture_img"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:maxWidth="600dp"
-                    android:src="@drawable/pet_paw"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerInside"
                     android:layout_margin="5dp"
+                    android:adjustViewBounds="true"
                     android:background="@android:color/transparent"
-                    android:contentDescription="profile picture" />
+                    android:contentDescription="profile picture"
+                    android:maxWidth="600dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/pet_paw" />
 
                 <TextView
                     android:id="@+id/pet_name_txtv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:gravity="center"
+                    android:padding="1dp"
                     android:text="My Pet Name"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/colorPrimary"
-                    android:gravity="center"
-                    android:layout_margin="5dp"
-                    android:padding="1dp" />
+                    android:textColor="@color/colorPrimary" />
             </FrameLayout>
 
             <LinearLayout
