--- a/app/src/main/res/layout/activity_add_edit_advert.xml
+++ b/app/src/main/res/layout/activity_add_edit_advert.xml
@@ -9,56 +9,59 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Advert Details"
+            android:layout_marginBottom="15dp"
             android:fontFamily="serif"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_marginBottom="15dp"/>
+            android:text="Advert Details"
+            android:textColor="@color/colorPrimaryDark" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Advert Type: "/>
+                android:text="Advert Type: " />
 
             <Spinner
                 android:id="@+id/advertType_spnr"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:entries="@array/advert_types"
+                android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"/>
+                android:entries="@array/advert_types" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title:"/>
+                android:text="Title:" />
+
             <EditText
                 android:id="@+id/advertTitle_etxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Advert Title"
-                android:maxLines="2"
-                android:ellipsize="start"
-                android:inputType="textAutoCorrect|textCapWords"
+                android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"/>
+                android:ellipsize="start"
+                android:hint="Advert Title"
+                android:inputType="textAutoCorrect|textCapWords"
+                android:maxLines="2" />
         </LinearLayout>
 
         <LinearLayout
@@ -69,64 +72,68 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price:"/>
+                android:text="Price:" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$"
+                android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"/>
+                android:text="$" />
+
             <EditText
                 android:id="@+id/advertPrice_etxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="price in dollars"
-                android:inputType="numberDecimal"/>
+                android:inputType="numberDecimal" />
         </LinearLayout>
 
-       <EditText
-           android:id="@+id/advertDetails_etxt"
+        <EditText
+            android:id="@+id/advertDetails_etxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:hint="Advert Full Details"
-            android:inputType="textMultiLine|textAutoCorrect"
-            android:layout_margin="10dp"/>
+            android:inputType="textMultiLine|textAutoCorrect" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pet Type: "/>
+                android:text="Pet Type: " />
 
             <Spinner
                 android:id="@+id/petType_spnr"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:entries="@array/pet_types"
+                android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"/>
+                android:entries="@array/pet_types" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pet Type: "/>
+                android:text="Pet Type: " />
 
             <AutoCompleteTextView
                 android:id="@+id/petBreed_atxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Pet Breed"
-                android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:inputType="textAutoComplete|textCapWords"/>
+                android:layout_marginStart="10dp"
+                android:hint="Pet Breed"
+                android:inputType="textAutoComplete|textCapWords" />
         </LinearLayout>
 
         <LinearLayout
@@ -143,12 +150,12 @@
                 android:id="@+id/dayPick_etxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="Day"
+                android:layout_weight="1"
                 android:ems="2"
                 android:gravity="center"
-                android:selectAllOnFocus="true"
-                android:layout_weight="1" />
+                android:hint="Day"
+                android:inputType="number"
+                android:selectAllOnFocus="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -157,11 +164,11 @@
 
             <Spinner
                 android:id="@+id/monthPick_spnr"
+                style="@android:style/Widget.Material.Spinner.Underlined"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:entries="@array/months"
                 android:layout_weight="1"
-                style="@android:style/Widget.Material.Spinner.Underlined"
+                android:entries="@array/months"
                 tools:targetApi="lollipop" />
 
             <TextView
@@ -173,30 +180,31 @@
                 android:id="@+id/yearPick_etxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="Year"
+                android:layout_weight="1"
                 android:ems="3"
                 android:gravity="center"
-                android:selectAllOnFocus="true"
-                android:layout_weight="1" />
+                android:hint="Year"
+                android:inputType="number"
+                android:selectAllOnFocus="true" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pet Gender: "/>
+                android:text="Pet Gender: " />
 
             <Spinner
                 android:id="@+id/petGender_spnr"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:entries="@array/genders"
+                android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"/>
+                android:entries="@array/genders" />
         </LinearLayout>
 
         <LinearLayout
@@ -204,12 +212,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center_vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Is Pet Neutered? "
+                android:layout_marginEnd="35dp"
                 android:layout_marginRight="35dp"
-                android:layout_marginEnd="35dp"/>
+                android:text="Is Pet Neutered? " />
 
             <RadioGroup
                 android:id="@+id/isNeutered_rgrp"
@@ -221,13 +230,13 @@
                     android:id="@+id/neutered_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Yes"/>
+                    android:text="Yes" />
 
                 <RadioButton
                     android:id="@+id/notNeutered_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="No"/>
+                    android:text="No" />
             </RadioGroup>
         </LinearLayout>
 
@@ -236,29 +245,30 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center_vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Is Pet Microchipped? "/>
+                android:text="Is Pet Microchipped? " />
 
             <RadioGroup
                 android:id="@+id/isMicrochipped_rgrp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="end">
+                android:layout_gravity="end"
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/microchipped_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Yes"/>
+                    android:text="Yes" />
 
                 <RadioButton
                     android:id="@+id/notMicrochipped_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="No"/>
+                    android:text="No" />
             </RadioGroup>
         </LinearLayout>
 
@@ -267,12 +277,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center_vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Is Pet Vaccinated? "
+                android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginEnd="20dp"/>
+                android:text="Is Pet Vaccinated? " />
 
             <RadioGroup
                 android:id="@+id/isVaccinated_rgrp"
@@ -284,74 +295,75 @@
                     android:id="@+id/vaccinated_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Yes"/>
+                    android:text="Yes" />
 
                 <RadioButton
                     android:id="@+id/notVaccinated_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="No"/>
+                    android:text="No" />
             </RadioGroup>
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/nice_gray"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:background="@color/nice_gray" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Contact Information"
+            android:layout_marginBottom="15dp"
             android:fontFamily="serif"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_marginBottom="15dp"/>
+            android:text="Contact Information"
+            android:textColor="@color/colorPrimaryDark" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
+
             <AutoCompleteTextView
                 android:id="@+id/country_etxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:inputType="textAutoComplete"
-                android:hint="Country" />
+                android:hint="Country"
+                android:inputType="textAutoComplete" />
 
             <AutoCompleteTextView
                 android:id="@+id/city_etxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:inputType="textAutoComplete"
-                android:hint="City" />
+                android:hint="City"
+                android:inputType="textAutoComplete" />
         </LinearLayout>
 
         <EditText
             android:id="@+id/email_etxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
+            android:layout_margin="10dp"
             android:hint="Email"
-            android:layout_margin="10dp"/>
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/phoneNumber_etxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:hint="Phone Number"
-            android:inputType="phone"
-            android:layout_margin="10dp"/>
+            android:inputType="phone" />
 
         <Button
             android:id="@+id/publishAdvert_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Publish Advert"
             android:layout_margin="10dp"
-            android:onClick="publishAdvert"/>
+            android:onClick="publishAdvert"
+            android:text="Publish Advert" />
     </LinearLayout>
 </ScrollView>
