--- a/app/src/main/res/layout/activity_add_edit_pet.xml
+++ b/app/src/main/res/layout/activity_add_edit_pet.xml
@@ -10,64 +10,63 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
-
+        android:paddingTop="@dimen/activity_vertical_margin">
 
 
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:rowCount="9"
+            android:layout_gravity="center"
             android:columnCount="2"
-            android:layout_gravity="center">
+            android:orientation="vertical"
+            android:rowCount="9">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="1"
                 android:layout_column="0"
                 android:layout_gravity="center_vertical"
-                android:text="Name:"
-                android:layout_margin="5dp" />
+                android:layout_margin="5dp"
+                android:layout_row="1"
+                android:text="Name:" />
 
             <EditText
                 android:id="@+id/petName_etxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="1"
                 android:layout_column="1"
-                android:hint="Pet name"
                 android:layout_gravity="fill"
+                android:layout_row="1"
+                android:hint="Pet name"
                 android:inputType="textAutoCorrect|textCapWords" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="2"
                 android:layout_column="0"
                 android:layout_gravity="center_vertical"
-                android:text="Birth Date:"
-                android:layout_margin="5dp" />
+                android:layout_margin="5dp"
+                android:layout_row="2"
+                android:text="Birth Date:" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="2"
                 android:layout_column="1"
-                android:layout_gravity="fill">
+                android:layout_gravity="fill"
+                android:layout_row="2">
 
                 <EditText
                     android:id="@+id/dayPick_etxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ems="2"
                     android:gravity="center"
                     android:hint="Day"
-                    android:ems="2"
                     android:inputType="number"
                     android:selectAllOnFocus="true" />
 
@@ -78,11 +77,11 @@
 
                 <Spinner
                     android:id="@+id/monthPick_spnr"
+                    style="@android:style/Widget.Material.Light.Spinner.Underlined"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:entries="@array/months"
-                    style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                    android:gravity="center"
                     tools:targetApi="lollipop" />
 
                 <TextView
@@ -94,10 +93,10 @@
                     android:id="@+id/yearPick_etxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:hint="Year"
                     android:ems="3"
                     android:gravity="center"
+                    android:hint="Year"
+                    android:inputType="number"
                     android:selectAllOnFocus="true" />
             </LinearLayout>
 
@@ -105,73 +104,73 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="3"
                 android:layout_column="0"
-                android:text="Gender:"
+                android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
-                android:layout_gravity="center_vertical" />
+                android:layout_row="3"
+                android:text="Gender:" />
 
             <RadioGroup
                 android:id="@+id/genderPick_rgrb"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_row="3"
                 android:layout_column="1"
-                android:orientation="horizontal"
-                android:layout_margin="5dp"
                 android:layout_gravity="fill"
-                android:gravity="center">
+                android:layout_margin="5dp"
+                android:layout_row="3"
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/genderMale_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Male"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:text="Male" />
 
                 <RadioButton
                     android:id="@+id/genderFemale_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Female"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:text="Female" />
             </RadioGroup>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="4"
                 android:layout_column="0"
                 android:layout_gravity="center_vertical"
-                android:text="Type:"
-                android:layout_margin="5dp" />
+                android:layout_margin="5dp"
+                android:layout_row="4"
+                android:text="Type:" />
 
             <Spinner
                 android:id="@+id/typePick_spnr"
+                style="@android:style/Widget.Material.Spinner.Underlined"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="4"
                 android:layout_column="1"
                 android:layout_gravity="fill"
+                android:layout_row="4"
                 android:entries="@array/pet_types"
-                style="@android:style/Widget.Material.Spinner.Underlined"
                 tools:targetApi="lollipop" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="5"
                 android:layout_column="0"
                 android:layout_margin="5dp"
+                android:layout_row="5"
                 android:text="Breed:" />
 
             <AutoCompleteTextView
                 android:id="@+id/petBreed_atxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="5"
                 android:layout_column="1"
                 android:layout_gravity="fill"
+                android:layout_row="5"
                 android:hint="Pet breed"
                 android:inputType="textAutoComplete|textCapWords"
                 android:selectAllOnFocus="true" />
@@ -179,27 +178,27 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="6"
                 android:layout_column="0"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
+                android:layout_row="6"
                 android:text="Weight:" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="6"
                 android:layout_column="1"
-                android:layout_gravity="fill">
+                android:layout_gravity="fill"
+                android:layout_row="6">
 
                 <EditText
                     android:id="@+id/petWeight_etxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:hint="Current weight"
                     android:inputType="number"
-                    android:selectAllOnFocus="true"
-                    android:hint="Current weight" />
+                    android:selectAllOnFocus="true" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -213,78 +212,78 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="7"
                 android:layout_column="0"
-                android:layout_margin="5dp"
                 android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:layout_row="7"
                 android:text="Neutered:" />
 
             <RadioGroup
                 android:id="@+id/isNeutered_rgrp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="7"
                 android:layout_column="1"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
-                android:orientation="horizontal"
-                android:layout_gravity="fill">
+                android:layout_row="7"
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/neutered_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Yes"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:text="Yes" />
 
                 <RadioButton
                     android:id="@+id/notNeutered_rbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="No"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:text="No" />
             </RadioGroup>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="8"
                 android:layout_column="0"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
+                android:layout_row="8"
                 android:text="Microchip:" />
 
             <EditText
                 android:id="@+id/microchipNumber_etxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="8"
                 android:layout_column="1"
                 android:layout_gravity="fill"
-                android:hint="Microchip number"
-                android:inputType="number"
+                android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp" />
+                android:layout_row="8"
+                android:hint="Microchip number"
+                android:inputType="number" />
         </GridLayout>
 
         <Button
             android:id="@+id/savePetProfile_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save"
-            android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginTop="15dp"
+            android:text="Save" />
 
         <Button
             android:id="@+id/deletePet_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Delete Pet"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="13dp"
             android:layout_marginEnd="13dp"
-            android:padding="0dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="15dp"
             android:background="@color/nice_red"
-            android:visibility="gone"/>
+            android:padding="0dp"
+            android:text="Delete Pet"
+            android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
