--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,36 +4,36 @@
     android:id="@+id/activity_reset_password"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:gravity="center"
     tools:context="com.ahmedbass.mypetfriend.ForgotPasswordActivity">
 
     <TextView
-        android:text="We'll send you an email with your password"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
+        android:text="We'll send you an email with your password"
         android:textSize="16sp" />
 
     <EditText
         android:id="@+id/email_etxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:layout_margin="20dp"
+        android:drawableEnd="@drawable/ic_email_black_24dp"
+        android:drawableRight="@drawable/ic_email_black_24dp"
         android:ems="10"
         android:hint="Enter your email"
-        android:layout_margin="20dp"
-        android:drawableRight="@drawable/ic_email_black_24dp"
-        android:drawableEnd="@drawable/ic_email_black_24dp" />
+        android:inputType="textEmailAddress" />
 
     <Button
-        android:text="Send"
+        android:id="@+id/sendPassword_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sendPassword_btn"
-        android:layout_margin="20dp" />
+        android:layout_margin="20dp"
+        android:text="Send" />
 </LinearLayout>
