--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -9,87 +9,103 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp">
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="My Profile"
-                    android:id="@+id/myProfile_btn"
-                    android:onClick="moveToActivity"/>
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/user1"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:padding="5dp"
-                    android:elevation="6dp"/>
-            </FrameLayout>
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp">
+
             <Button
+                android:id="@+id/myProfile_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="My Adverts"
-                android:id="@+id/myAdverts_btn"
-                android:onClick="moveToActivity"/>
+                android:onClick="moveToActivity"
+                android:text="My Profile" />
+
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/coin"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:elevation="6dp"
                 android:padding="5dp"
-                android:elevation="6dp"/>
+                android:src="@drawable/user1" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp">
+
+            <Button
+                android:id="@+id/myAdverts_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="moveToActivity"
+                android:text="My Adverts" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:elevation="6dp"
+                android:padding="5dp"
+                android:src="@drawable/coin" />
         </FrameLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/nice_dark_gray"
-            android:layout_marginTop="200dp"/>
+            android:layout_marginTop="200dp"
+            android:background="@color/nice_dark_gray" />
 
         <FrameLayout
             android:id="@+id/frame_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp">
+
             <Button
+                android:id="@+id/logout_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Lougout"
-                android:id="@+id/logout_btn"
-                android:onClick="logout"/>
+                android:onClick="logout"
+                android:text="Lougout" />
+
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/logout"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:elevation="6dp"
                 android:padding="5dp"
-                android:elevation="6dp"/>
+                android:src="@drawable/logout" />
         </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:onClick="aboutApp_dialog"
+            android:text="About 'MyPetFriend'"
+            android:textColor="@color/colorAccentDark"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </ScrollView>
