--- a/app/src/main/res/layout/activity_my_pets.xml
+++ b/app/src/main/res/layout/activity_my_pets.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/container">
+    android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/myPets_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
     <TextView
         android:id="@+id/emptyView_txtv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="You don't have any pets yet.\nAdd a new pet from the menu."
         android:gravity="center"
         android:padding="16dp"
-        android:visibility="gone"/>
+        android:text="You don't have any pets yet.\nAdd a new pet from the menu."
+        android:visibility="gone" />
 </FrameLayout>
