--- a/app/src/main/res/layout/activity_pet_profile.xml
+++ b/app/src/main/res/layout/activity_pet_profile.xml
@@ -11,42 +11,46 @@
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <ViewSwitcher
                     android:id="@+id/viewSwitcher"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fitsSystemWindows="true">
+
                     <com.ahmedbass.mypetfriend.ThreeFourImageView
                         android:id="@+id/petProfilePic_img1"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:scaleType="centerCrop"
                         android:fitsSystemWindows="true"
+                        android:scaleType="centerCrop"
                         app:layout_collapseMode="parallax" />
+
                     <com.ahmedbass.mypetfriend.ThreeFourImageView
                         android:id="@+id/petProfilePic_img2"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:scaleType="centerCrop"
                         android:fitsSystemWindows="true"
+                        android:scaleType="centerCrop"
                         app:layout_collapseMode="parallax" />
                 </ViewSwitcher>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -57,22 +61,22 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_fab"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        app:fabSize="normal"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
+        android:clickable="true"
         android:src="@drawable/camera"
+        app:fabSize="normal"
         app:layout_anchor="@id/appBar"
-        app:layout_anchorGravity="bottom|end"
-        android:clickable="true"/>
+        app:layout_anchorGravity="bottom|end" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,12 +88,12 @@
             android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            app:tabSelectedTextColor="#FFFFFF"
-            app:tabTextColor="#0000FF"
             android:background="@color/colorAccent"
-            android:elevation="4dp" />
+            android:elevation="4dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="#FFFFFF"
+            app:tabTextColor="#0000FF" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
