--- a/app/src/main/res/layout/fragment_pet_info.xml
+++ b/app/src/main/res/layout/fragment_pet_info.xml
@@ -19,21 +19,21 @@
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/pet_info1"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/pet_info1" />
 
             <TextView
                 android:id="@+id/personalInformation_txtv"
+                style="@style/myTextViewStyle.myTitleStyle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="Personal Information"
-                style="@style/myTextViewStyle.myTitleStyle"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:text="Personal Information" />
         </LinearLayout>
 
         <View
@@ -45,171 +45,171 @@
             android:id="@+id/personalInformation_gridLout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:rowCount="8"
-            android:columnCount="2"
+            android:layout_gravity="center"
             android:background="@android:color/white"
-            android:padding="10dp"
+            android:columnCount="2"
             android:elevation="2dp"
-            android:layout_gravity="center">
+            android:padding="10dp"
+            android:rowCount="8">
 
             <TextView
-                android:layout_row="0"
-                android:layout_column="0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Birth Date:"
-                android:layout_rowSpan="2"
-                android:textColor="@color/primaryText"
+                android:layout_column="0"
+                android:layout_columnWeight="1"
                 android:layout_gravity="fill"
+                android:layout_margin="5dp"
+                android:layout_row="0"
+                android:layout_rowSpan="2"
                 android:gravity="fill_vertical"
-                android:layout_columnWeight="1" />
+                android:text="Birth Date:"
+                android:textColor="@color/primaryText" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_margin="5dp"
                 android:layout_row="2"
-                android:layout_column="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:text="Gender:"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_margin="5dp"
                 android:layout_row="3"
-                android:layout_column="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:text="Type:"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_margin="5dp"
                 android:layout_row="4"
-                android:layout_column="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:text="Breed:"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_margin="5dp"
                 android:layout_row="5"
-                android:layout_column="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:text="Current Weight:"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_margin="5dp"
                 android:layout_row="6"
-                android:layout_column="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:text="Neutered:"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
-                android:layout_row="7"
-                android:layout_column="0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
+                android:layout_row="7"
                 android:text="Microchip:"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
                 android:id="@+id/birthDate_txtv"
-                android:layout_row="0"
-                android:layout_column="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
+                android:layout_row="0"
                 android:layout_rowSpan="2"
-                android:text="12/jan/2016\n(15.9 years old)"
+                android:ellipsize="end"
+                android:gravity="fill_vertical"
                 android:maxEms="8"
                 android:maxLines="2"
-                android:ellipsize="end"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill"
-                android:gravity="fill_vertical"
-                android:layout_columnWeight="1" />
+                android:text="12/jan/2016\n(15.9 years old)"
+                android:textColor="@color/primaryText" />
 
             <TextView
                 android:id="@+id/gender_txtv"
-                android:layout_row="2"
-                android:layout_column="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
+                android:layout_row="2"
                 android:text="Gender"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
                 android:id="@+id/type_txtv"
-                android:layout_row="3"
-                android:layout_column="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
+                android:layout_row="3"
                 android:text="Type"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
                 android:id="@+id/breed_txtv"
-                android:layout_row="4"
-                android:layout_column="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
-                android:text="Breed"
+                android:layout_row="4"
+                android:ellipsize="end"
                 android:maxEms="8"
                 android:maxLines="2"
-                android:ellipsize="end"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:text="Breed"
+                android:textColor="@color/primaryText" />
 
             <TextView
                 android:id="@+id/weight_txtv"
-                android:layout_row="5"
-                android:layout_column="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
+                android:layout_row="5"
                 android:text="Current Weight"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
                 android:id="@+id/isNeutered_txtv"
-                android:layout_row="6"
-                android:layout_column="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
+                android:layout_row="6"
                 android:text="Neutered / Spayed"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
 
             <TextView
                 android:id="@+id/microchipNumber_txtv"
-                android:layout_row="7"
-                android:layout_column="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="fill"
                 android:layout_margin="5dp"
+                android:layout_row="7"
                 android:text="Microchip Number"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="fill" />
+                android:textColor="@color/primaryText" />
         </GridLayout>
 
         <View
@@ -219,92 +219,92 @@
 
         <TextView
             android:id="@+id/breedHighlights_txtv"
+            style="@style/myTextViewStyle.myTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="Highlights"
-            style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:background="@color/white"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
-            android:elevation="2dp"/>
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:text="Highlights" />
 
         <TextView
             android:id="@+id/breedPersonality_txtv"
+            style="@style/myTextViewStyle.myTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="Personality"
-            style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:background="@color/white"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
-            android:elevation="2dp" />
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:text="Personality" />
 
         <TextView
             android:id="@+id/breedHealth_txtv"
+            style="@style/myTextViewStyle.myTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="Health"
-            style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:background="@color/white"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
-            android:elevation="2dp"/>
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:text="Health" />
 
         <TextView
             android:id="@+id/breedCare_txtv"
+            style="@style/myTextViewStyle.myTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="Care"
-            style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:background="@color/white"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
-            android:elevation="2dp"/>
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:text="Care" />
 
         <TextView
             android:id="@+id/breedFeeding_txtv"
+            style="@style/myTextViewStyle.myTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="Feeding"
-            style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:background="@color/white"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
-            android:elevation="2dp"/>
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:text="Feeding" />
 
         <TextView
             android:id="@+id/breedHistory_txtv"
+            style="@style/myTextViewStyle.myTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="History"
-            style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:background="@color/white"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:elevation="2dp"/>
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:text="History" />
     </LinearLayout>
 </ScrollView>
