--- a/app/src/main/res/layout/list_item_advert.xml
+++ b/app/src/main/res/layout/list_item_advert.xml
@@ -1,53 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="5dp"
     android:background="@android:color/background_light"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/list_deal_thumbnail"
         android:layout_width="0dp"
         android:layout_height="80dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:layout_weight="1"
-        app:srcCompat="@drawable/pet_paw"
+        android:adjustViewBounds="true"
         android:background="@color/white"
+        android:cropToPadding="true"
         android:padding="1.5dp"
         android:scaleType="centerInside"
-        android:adjustViewBounds="true"
-        android:cropToPadding="true"
-        android:layout_marginRight="2dp"
-        android:layout_marginEnd="2dp" />
+        app:srcCompat="@drawable/pet_paw" />
 
     <LinearLayout
-        android:layout_weight="3.5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="3.5"
         android:orientation="vertical"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp">
+        android:paddingEnd="5dp"
+        android:paddingStart="5dp">
 
         <TextView
             android:id="@+id/advertTitle_txtv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="2"
             android:ellipsize="end"
-            tools:text="2 german shepard dogs for Sale"
-            android:textColor="@color/colorPrimaryDark" />
+            android:maxLines="2"
+            android:textColor="@color/colorPrimaryDark"
+            tools:text="2 german shepard dogs for Sale" />
 
         <TextView
             android:id="@+id/advertLocation_txtv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="City, Country"
-            android:maxLines="1"
-            android:ellipsize="end"
+            android:drawableLeft="@drawable/ic_location_on_black_24dp"
             android:drawableStart="@drawable/ic_location_on_black_24dp"
-            android:drawableLeft="@drawable/ic_location_on_black_24dp" />
+            android:ellipsize="end"
+            android:maxLines="1"
+            tools:text="City, Country" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -58,27 +58,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
+            android:paddingEnd="5dp"
+            android:paddingStart="5dp">
 
             <TextView
                 android:id="@+id/advertPrice_txtv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                tools:text="$5,000"
+                android:layout_weight="1"
                 android:textColor="@color/primaryText"
-                android:layout_weight="1" />
+                tools:text="$5,000" />
 
             <TextView
                 android:id="@+id/advertCreateDate_txtv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                tools:text="01/12/2016"
+                android:drawableLeft="@drawable/ic_access_time_black_24dp"
+                android:drawablePadding="2dp"
+                android:drawableStart="@drawable/ic_access_time_black_24dp"
                 android:scaleX=".9"
                 android:scaleY=".9"
-                android:drawableStart="@drawable/ic_access_time_black_24dp"
-                android:drawableLeft="@drawable/ic_access_time_black_24dp"
-                android:drawablePadding="2dp" />
+                tools:text="01/12/2016" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
