--- a/app/src/main/res/layout/list_item_pet.xml
+++ b/app/src/main/res/layout/list_item_pet.xml
@@ -3,54 +3,53 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
-    android:paddingStart="24dp"
+    android:paddingBottom="40dp"
     android:paddingEnd="24dp"
-    android:paddingTop="40dp"
-    android:paddingBottom="40dp">
+    android:paddingStart="24dp"
+    android:paddingTop="40dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/pet_item_crdv"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardCornerRadius="10dp"
+        android:layout_gravity="center"
+        android:background="?android:attr/selectableItemBackground"
         android:elevation="4dp"
-        android:background="?android:attr/selectableItemBackground">
+        card_view:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_gravity="center"
-            android:gravity="center"
             android:background="@drawable/mypets_list_background"
-            android:paddingTop="10dp"
+            android:gravity="center"
+            android:orientation="vertical"
             android:paddingBottom="10dp"
+            android:paddingEnd="5dp"
             android:paddingStart="5dp"
-            android:paddingEnd="5dp">
+            android:paddingTop="10dp">
 
             <TextView
                 android:id="@+id/pet_name_txtv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|top"
                 android:text="My Pet Name"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/colorPrimaryDark"
-                android:layout_gravity="center_horizontal|top" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <ImageButton
                 android:id="@+id/pet_picture_img"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:src="@drawable/pet_paw"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
-                android:contentDescription="profile picture" />
+                android:contentDescription="profile picture"
+                android:scaleType="centerCrop"
+                android:src="@drawable/pet_paw" />
 
             <TextView
                 android:id="@+id/pet_breed_and_type_txtv"
