--- a/app/src/main/res/layout/list_item_pet_care_provider.xml
+++ b/app/src/main/res/layout/list_item_pet_care_provider.xml
@@ -1,55 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="5dp"
     android:background="@android:color/background_light"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/petCareProvider_thumbnail_img"
         android:layout_width="0dp"
         android:layout_height="80dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:layout_weight="1"
-        android:src="@drawable/user_profile"
+        android:adjustViewBounds="true"
         android:background="@color/white"
+        android:cropToPadding="true"
         android:padding="2dp"
         android:scaleType="centerInside"
-        android:adjustViewBounds="true"
-        android:cropToPadding="true"
-        android:layout_marginRight="2dp"
-        android:layout_marginEnd="2dp" />
+        android:src="@drawable/user_profile" />
 
     <LinearLayout
-        android:layout_weight="3.5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="3.5"
         android:orientation="vertical"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp">
+        android:paddingEnd="5dp"
+        android:paddingStart="5dp">
 
         <TextView
             android:id="@+id/petCareProviderName_txtv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="1"
+            android:layout_margin="2dp"
             android:ellipsize="end"
+            android:maxLines="1"
             android:text="Name"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_margin="2dp" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/petCareProviderLocation_txtv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="city, country"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:layout_margin="2dp"
+            android:drawableLeft="@drawable/ic_location_on_black_24dp"
             android:drawableStart="@drawable/ic_location_on_black_24dp"
-            android:drawableLeft="@drawable/ic_location_on_black_24dp" />
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="city, country" />
 
         <View
             android:layout_width="match_parent"
@@ -60,41 +58,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
+            android:paddingEnd="5dp"
+            android:paddingStart="5dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="AVAIL."
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_weight="1"
-                android:gravity="center" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/darker_gray" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="YRS EXP."
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:layout_weight="1"
-                android:gravity="center" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/darker_gray" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="PAY RATE"
                 android:gravity="center"
+                android:text="AVAIL."
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/darker_gray" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="YRS EXP."
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/darker_gray" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="PAY RATE"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
         </LinearLayout>
@@ -102,17 +100,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
+            android:paddingEnd="5dp"
+            android:paddingStart="5dp">
 
             <TextView
                 android:id="@+id/petCareProviderAvailability_txtv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="FULL-TIME"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_weight="1"
-                android:gravity="center" />
+                android:gravity="center"
+                android:text="FULL-TIME"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <View
                 android:layout_width="1dp"
@@ -123,10 +121,10 @@
                 android:id="@+id/petCareProviderExperienceYears_txtv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="0"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_weight="1"
-                android:gravity="center" />
+                android:gravity="center"
+                android:text="0"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <View
                 android:layout_width="1dp"
@@ -138,9 +136,9 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:gravity="center"
                 android:text="$15/hr"
-                android:gravity="center" />
+                android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
