--- a/app/src/main/res/layout/list_item_schedule_activity.xml
+++ b/app/src/main/res/layout/list_item_schedule_activity.xml
@@ -2,30 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:background="@android:color/white"
     android:gravity="center_vertical"
-    android:padding="5dp"
-    android:background="@android:color/white">
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/scheduleActivityIcon_img"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
         android:src="@drawable/paw_symbol" />
 
     <TextView
         android:id="@+id/scheduleActivityType_txtv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_margin="10dp"
-        android:textSize="20sp"
+        android:layout_weight="1"
+        android:text="Breakfast"
         android:textColor="@color/primaryText"
-        android:text="Breakfast" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/scheduleActivityTime_txtv"
@@ -38,8 +38,8 @@
         android:id="@+id/scheduleActivityNotificationIcon_img"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/notification_on"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        android:src="@drawable/notification_on" />
 
 
 </LinearLayout>
