--- a/app/src/main/res/layout/list_item_timeline.xml
+++ b/app/src/main/res/layout/list_item_timeline.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="hello"
-        android:textSize="24sp"
-        android:padding="8dp"
+        android:background="@color/white"
         android:gravity="center"
-        android:background="@color/white" />
+        android:padding="8dp"
+        android:text="hello"
+        android:textSize="24sp" />
 
 </LinearLayout>
